feature: Add ABtest func

--- a/cuped_guide.ipynb
+++ b/cuped_guide.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "16c20fa8",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
     "import numpy as np\n",
     "from scipy import stats\n",
     "import datetime\n",
-    "from dateutil.relativedelta import relativedelta\n"
+    "from dateutil.relativedelta import relativedelta"
    ]
   },
   {
