--- a/test_RCT_analyser.ipynb
+++ b/test_RCT_analyser.ipynb
@@ -205,41 +205,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "a06af3fd",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          group  revenue_exp\n",
-      "0       control   105.088363\n",
-      "1       control   110.212705\n",
-      "2     treatment   100.093227\n",
-      "3       control    87.615154\n",
-      "4       control    88.719569\n",
-      "...         ...          ...\n",
-      "1958  treatment    92.790248\n",
-      "1959  treatment   124.315196\n",
-      "1960  treatment    83.326806\n",
-      "1961    control    81.587266\n",
-      "1962  treatment   124.796280\n",
-      "\n",
-      "[1963 rows x 2 columns]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/davidchung/Documents/cuped_comprehensive_guide/calculators.py:51: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  transformed_data[success_metric] = exp_cuped\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'revenue_exp': {'Mean': {'treatment': 101.74291867913796,\n",
+       "   'control': 99.42347070906241},\n",
+       "  'Variance': {'treatment': 1001.451554877565, 'control': 930.5085475845752},\n",
+       "  'Uplift': {'pcnt': 2.3328978092736476, 'absolute': 2.3194479700755437},\n",
+       "  'Significance': {'p-value': np.float64(0.0984783049357988),\n",
+       "   'ci_95': ConfidenceInterval(low=np.float64(-5.071216089846748), high=np.float64(0.432320149695689)),\n",
+       "   'ci_90': ConfidenceInterval(low=np.float64(-4.628469304398749), high=np.float64(-0.010426635752311064)),\n",
+       "   'ci_80': ConfidenceInterval(low=np.float64(-4.118226780655929), high=np.float64(-0.5206691594951294))},\n",
+       "  'Variance reduction': {'before': np.float64(966.6706102787891),\n",
+       "   'after': np.float64(966.6706102787891),\n",
+       "   'reduction_ratio': np.float64(0.0)},\n",
+       "  'Skewness': {}}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -247,7 +236,8 @@
     "    fake_data,\n",
     "    success_metrics = ['revenue_exp'],\n",
     "    group_col = 'group',\n",
-    "    X = ['revenue_pre']\n",
+    "    X = ['revenue_pre'],\n",
+    "    mode = 'abtest'\n",
     ")\n",
     "results"
    ]
@@ -671,13 +661,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/p_/crcfmzyx50jb9s2xh7lvbzdh0000gn/T/ipykernel_90135/3280743303.py:39: SettingWithCopyWarning: \n",
+      "/var/folders/p_/crcfmzyx50jb9s2xh7lvbzdh0000gn/T/ipykernel_82078/3280743303.py:39: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  cuped_transformed_metrics[success_metric] = exp_cuped\n",
-      "/var/folders/p_/crcfmzyx50jb9s2xh7lvbzdh0000gn/T/ipykernel_90135/3280743303.py:39: SettingWithCopyWarning: \n",
+      "/var/folders/p_/crcfmzyx50jb9s2xh7lvbzdh0000gn/T/ipykernel_82078/3280743303.py:39: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
